--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 layout: minimal
 title: "About me"
 permalink: /about/index.html
-description: "Some description about Victor Igor..."
+description: "Some description about Arjan KC..."
 ---
 
-<img itemprop="image" class="img-rounded about_perfil" src=" https://68.media.tumblr.com/93f384858e9273d5b980b418e2f2f4d5/tumblr_o5i2aybLJG1uapsfmo2_250.png" alt="My profile">
+<img itemprop="image" class="img-rounded about_perfil" src=" https://scontent.fktm3-1.fna.fbcdn.net/v/t1.0-9/20882223_10207648982262930_2853917422453853587_n.jpg" alt="My profile">
 
 <h2>My projects</h2>
 
