--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ permalink: /about/index.html
 description: "Some description about Arjan KC..."
 ---
 
-<img itemprop="image" class="img-rounded about_perfil" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Cubesat_icon.svg/2000px-Cubesat_icon.svg.png" alt="My profile">
+<img itemprop="image" class="img-rounded about_perfil" src="https://scontent.fktm3-1.fna.fbcdn.net/v/t1.0-1/p160x160/20882223_10207648982262930_2853917422453853587_n.jpg?oh=42b1319a659338abf86513c066778646&oe=5A656196" alt="My profile">
 
 <h2>My projects</h2>
 
